Fixed: Regression: Tabs panel: Extra margin at the bottom

--- a/src/styles/themes/compact/sidebar/panel.tabs.styl
+++ b/src/styles/themes/compact/sidebar/panel.tabs.styl
@@ -12,7 +12,9 @@
     position: relative
     width: 100%
     height: 100%
-    padding-bottom: 64px
+  // Extra space at the bottom
+  > div > div:last-of-type
+    margin-bottom: 64px
 
 .TabsPanel .scrollable
   padding: 1px 0 0
@@ -29,7 +31,7 @@
   grid-gap: 1px
   background-color: var(--frame-bg)
   z-index: 1
-  transition: transform var(--d-fast), opacity var(--d-fast)
+  transition: transform var(--d-fast), opacity var(--d-fast), z-index var(--d-fast) var(--d-fast)
   &[data-new-tab-bar-position="bottom"]
     position: relative
     bottom: auto
@@ -46,6 +48,7 @@
     box-shadow: 0 -10px 12px -10px #00000000, 0 -1px 0 0 #00000000
 
 .ScrollBox .bottom-shadow[data-show="true"] + .scroll-container .new-tab-btns
+  transition: transform var(--d-fast), opacity var(--d-fast)
   z-index: 1000
   &:before
     box-shadow: 0 -10px 12px -10px #00000064, 0 -1px 0 0 #00000008
